Add RuleValue#toJSON()